Indexing experiments (#238)
* experiment with indexing

* work on index

* work on indexing

* work on indexing

* cleanup pdp options

* work on index

* index bench

* Update build.sh

* Update build.sh

* benchmarking work

* sonarqube and docs

* Update PolicyIndex.java

* fix sonar

* update bench scripts

* cleanup